--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -32,6 +33,13 @@ dependencies {
 
 	// jwt 토큰 관련 라이브러리 추가
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	// 파일 처리를 위한 aws 의존성 추가
+	implementation 'software.amazon.awssdk:s3:2.17.58'
+
+	// 동시성 제어를 위한 이벤트 기반 rabbitmq 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
 }
 
 tasks.named('test') {
