--- a/.github/workflows/deploy-server-with-compose.yml
+++ b/.github/workflows/deploy-server-with-compose.yml
@@ -18,6 +18,6 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{secrets.DOCKER_EMAIL}}
-          pssword: ${{secrets.DOCKER_PASSWORD}}
+          password: ${{secrets.DOCKER_PASSWORD}}
       - name: push to dockerhub
         run: docker -push hj0311/ordersystem:latest
